--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "canvas-confetti": "^1.9.3",
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
